Scanner/Scanner.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Scanner.java */
package Scanner;
import java.io.*;
import Types.*;
import Exceptions.*;
import Visitors.*;
import jjtNode.*;
import Scanner.*;

public class Scanner/*@bgen(jjtree)*/implements ScannerTreeConstants, ScannerConstants {/*@bgen(jjtree)*/
  protected static JJTScannerState jjtree = new JJTScannerState();
    public static void main(String[] args) throws ParseException, FileNotFoundException {
        File file = new File("test.txt");
        FileInputStream stream = new FileInputStream(file);
        Scanner parser = new Scanner(stream);

        try {
            SimpleNode n = parser.PROG();
            //n.dump("");

            /*System.out.println("Pretty printing:");
            PrettyPrinterVisitor ppv = new PrettyPrinterVisitor();
            n.jjtAccept(ppv, null);
            System.out.println(ppv.print);*/

            System.out.println("Filling the symboltable:");
            SymbolTableVisitor stv = new SymbolTableVisitor();
            n.jjtAccept(stv, null);
            System.out.println(SymbolTableVisitor.ST);

            System.out.println();
            System.out.println("Checking types:");
            TypeCheckVisitor tcv = new TypeCheckVisitor();
            n.jjtAccept(tcv, null);
            System.out.println("Finished succesfully");
        }catch(Exception e) {
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

  static final public SimpleNode PROG() throws ParseException {
                       /*@bgen(jjtree) PROG */
  PROG jjtn000 = new PROG(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODEL:
        MDL();
        IMPRT();
        STMT();
        break;
      case IMPORT:
        IMPRT();
        MDL();
        STMT();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void IMPRT() throws ParseException {
 /*@bgen(jjtree) IMPORT */
  IMPORT jjtn000 = new IMPORT(JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      FLNM();
      jj_consume_token(IN);
      IDEN();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ARGSSTART:
        jj_consume_token(ARGSSTART);
        label_1:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
        }
        IMOPTIONS();
        jj_consume_token(ARGSSTOP);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      label_2:
      while (true) {
        jj_consume_token(EOL);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void IMOPTIONS() throws ParseException {
 /*@bgen(jjtree) IMPOPTIONS */
  IMPOPTIONS jjtn000 = new IMPOPTIONS(JJTIMPOPTIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOHEADERS:
        NOHEADERS();
        label_3:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDKEY:
          jj_consume_token(IDKEY);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            IDEN();
            break;
          case INT:
            INTEGER();
            break;
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          label_4:
          while (true) {
            jj_consume_token(EOL);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case EOL:
              ;
              break;
            default:
              jj_la1[6] = jj_gen;
              break label_4;
            }
          }
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      case IDKEY:
        jj_consume_token(IDKEY);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          IDEN();
          break;
        case INT:
          INTEGER();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_5:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOHEADERS:
          NOHEADERS();
          label_6:
          while (true) {
            jj_consume_token(EOL);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case EOL:
              ;
              break;
            default:
              jj_la1[10] = jj_gen;
              break label_6;
            }
          }
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void FLNM() throws ParseException {
 /*@bgen(jjtree) FLNM */
  FLNM jjtn000 = new FLNM(JJTFLNM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(FILENAME);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void NOHEADERS() throws ParseException {
 /*@bgen(jjtree) NOHEADERS */
  NOHEADERS jjtn000 = new NOHEADERS(JJTNOHEADERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOHEADERS);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MDL() throws ParseException {
 /*@bgen(jjtree) MODEL */
  MODEL jjtn000 = new MODEL(JJTMODEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODEL);
      IDEN();
      jj_consume_token(ARGSSTART);
      label_7:
      while (true) {
        jj_consume_token(EOL);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COL:
        case ID:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          RLE();
          break;
        case COL:
          COLRLE();
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(ARGSSTOP);
      label_9:
      while (true) {
        jj_consume_token(EOL);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_9;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void COLRLE() throws ParseException {
      COLRULE jjtn001 = new COLRULE(JJTCOLRULE);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      jj_consume_token(COL);
      IDEN();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFINERULE:
        jj_consume_token(DEFINERULE);
        COLEXPR();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHERE:
          WHERE();
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
        label_10:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_10;
          }
        }
        break;
      case ARGSSTART:
        jj_consume_token(ARGSSTART);
        label_11:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[19] = jj_gen;
            break label_11;
          }
        }
        label_12:
        while (true) {
          COLPARTRLE();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            ;
            break;
          default:
            jj_la1[20] = jj_gen;
            break label_12;
          }
        }
        jj_consume_token(ARGSSTOP);
        label_13:
        while (true) {
          jj_consume_token(EOL);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_13;
          }
        }
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
      }
    }
  }

  static final public void COLPARTRLE() throws ParseException {
 /*@bgen(jjtree) COLPARTRULE */
  COLPARTRULE jjtn000 = new COLPARTRULE(JJTCOLPARTRULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      IDEN();
      jj_consume_token(DEFINERULE);
      COLEXPR();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        WHERE();
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      label_14:
      while (true) {
        jj_consume_token(EOL);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_14;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void COLEXPR() throws ParseException {
    COLOREXPR();
  }

  static final public void COLOREXPR() throws ParseException {
  int count = 0;
      COLOR jjtn001 = new COLOR(JJTCOLOR);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      COLANDEXPR();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_15;
        }
        jj_consume_token(OR);
                          count++;
        COLANDEXPR();
      }
    } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001,  count > 0);
      }
    }
  }

  static final public void COLANDEXPR() throws ParseException {
  int count = 0;
      COLAND jjtn001 = new COLAND(JJTCOLAND);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      COLVPEXPR();
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_16;
        }
        jj_consume_token(AND);
                          count++;
        COLVPEXPR();
      }
    } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001,  count > 0);
      }
    }
  }

  static final public void COLVPEXPR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM:
    case AVG:
    case COUNT:
    case DISTINCT:
      COLVALEXPR();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      COLEXPR();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void COLVALEXPR() throws ParseException {
 /*@bgen(jjtree) COLVALEXPR */
  COLVALEXPR jjtn000 = new COLVALEXPR(JJTCOLVALEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      SACD();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        t = jj_consume_token(EQUAL);
                          jjtn000.value = t.image;
        break;
      case COMPARISON:
        t = jj_consume_token(COMPARISON);
                                                                         jjtn000.value = t.image;
        break;
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      COLARITHMEXPR();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void WHERE() throws ParseException {
 /*@bgen(jjtree) WHERE */
  WHERE jjtn000 = new WHERE(JJTWHERE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHERE);
      EXPR();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void SACD() throws ParseException {
 /*@bgen(jjtree) SACD */
  SACD jjtn000 = new SACD(JJTSACD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUM:
        t = jj_consume_token(SUM);
        break;
      case AVG:
        t = jj_consume_token(AVG);
        break;
      case COUNT:
        t = jj_consume_token(COUNT);
        break;
      case DISTINCT:
        t = jj_consume_token(DISTINCT);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAREN);
      IDEN();
      jj_consume_token(RPAREN);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.value = t.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void COLARITHMEXPR() throws ParseException {
  Token t;
      ADD jjtn001 = new ADD(JJTADD);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      COLARITHMEXPR2();
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 43:
        case 44:
          ;
          break;
        default:
          jj_la1[30] = jj_gen;
          break label_17;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 43:
          t = jj_consume_token(43);
          break;
        case 44:
          t = jj_consume_token(44);
          break;
        default:
          jj_la1[31] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                 jjtn001.value = t.image;
        COLARITHMEXPR2();
      }
    } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
      }
    }
  }

  static final public void COLARITHMEXPR2() throws ParseException {
  Token t;
      MULT jjtn001 = new MULT(JJTMULT);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      COLOPERANDS();
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 45:
        case 46:
        case 47:
          ;
          break;
        default:
          jj_la1[32] = jj_gen;
          break label_18;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 45:
          t = jj_consume_token(45);
          break;
        case 46:
          t = jj_consume_token(46);
          break;
        case 47:
          t = jj_consume_token(47);
          break;
        default:
          jj_la1[33] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                      jjtn001.value = t.image;
        COLOPERANDS();
      }
    } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
      }
    }
  }

  static final public void COLOPERANDS() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      COLARITHMEXPR();
      jj_consume_token(RPAREN);
      break;
    case SUM:
    case AVG:
    case COUNT:
    case DISTINCT:
      SACD();
      break;
    case INT:
    case FLOAT:
      NUM();
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
